Added Wishlists index API endpoint and URL columns to Items
